[package]
name = "lockfree-collector"
description = "A lock-free blocked stealing collector"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lockfree-collector"
repository = "https://github.com/adamreichold/lockfree-collector"

[target.'cfg(not(target_has_atomic = "ptr"))'.dependencies]
portable-atomic = "1.0"

[target.'cfg(loom)'.dependencies]
loom = "0.7"
